welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:8: error: ';' expected but 'else' found.
while (!posFinale) {ecritMessage(""+compt);compt+=1; if(getY()==0) {diag+=1; setPos(0,diag%7)} else {if (getX()==6) {diag+=1;setPos(diag,6)}} else {setPos(getX()+1,getY()-1)}} ;ecritMessage(""+compt);compt+=1 
                                                                                                                                              ^